<resources>
    <string name="app_name">HopitHopit</string>
    <string name="title_search">검색</string>
    <string name="title_hospinfo">병원정보</string>
    <string name="title_acceptable">실시간</string>
    <string name="title_assessment">평가정보</string>
    <string name="title_ambulance">민간구급차</string>
    <string name="title_activity_accept1">MainActivity</string>
    <string name="title_activity_fragement_search_list">MainActivity</string>
</resources>